@@ -1,6 +1,6 @@
 {
 	"name": "blahaj-plus",
-	"version": "0.1.1",
+	"version": "0.2.0",
 	"title": "BLÅHAJ+",
 	"author": "Leah Anderson",
 	"factorio_version": "2.0",
